--- a/version_0.11/aoUI_v0.11.ui
+++ b/version_0.11/aoUI_v0.11.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Adaptive Optics Control v0.11&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:11pt; font-weight:600; text-decoration: underline;&quot;&gt;Adaptive Optics Control v0.11&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="close_button">
@@ -65,7 +65,7 @@
      <x>10</x>
      <y>320</y>
      <width>291</width>
-     <height>291</height>
+     <height>331</height>
     </rect>
    </property>
    <property name="title">
@@ -148,10 +148,10 @@
    <widget class="QPushButton" name="updateCameraSettingsB">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>30</y>
-      <width>61</width>
-      <height>51</height>
+      <x>200</x>
+      <y>60</y>
+      <width>81</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -161,8 +161,8 @@
    <widget class="QLineEdit" name="x0_roi">
     <property name="geometry">
      <rect>
-      <x>42</x>
-      <y>190</y>
+      <x>41</x>
+      <y>230</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -174,8 +174,8 @@
    <widget class="QLineEdit" name="y0_roi">
     <property name="geometry">
      <rect>
-      <x>42</x>
-      <y>220</y>
+      <x>41</x>
+      <y>260</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -187,8 +187,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>2</x>
-      <y>190</y>
+      <x>1</x>
+      <y>230</y>
       <width>31</width>
       <height>20</height>
      </rect>
@@ -203,8 +203,8 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>2</x>
-      <y>220</y>
+      <x>1</x>
+      <y>260</y>
       <width>31</width>
       <height>20</height>
      </rect>
@@ -219,8 +219,8 @@
    <widget class="QPushButton" name="extractROIB">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>190</y>
+      <x>89</x>
+      <y>230</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -232,8 +232,8 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>170</y>
+      <x>109</x>
+      <y>210</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -246,7 +246,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>138</y>
+      <y>180</y>
       <width>51</width>
       <height>21</height>
      </rect>
@@ -259,7 +259,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>138</y>
+      <y>180</y>
       <width>51</width>
       <height>21</height>
      </rect>
@@ -271,8 +271,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>158</y>
+      <x>29</x>
+      <y>198</y>
       <width>221</width>
       <height>16</height>
      </rect>
@@ -284,8 +284,8 @@
    <widget class="QPushButton" name="get_full_resolution_B">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>190</y>
+      <x>219</x>
+      <y>230</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -327,8 +327,8 @@
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>31</x>
-      <y>240</y>
+      <x>30</x>
+      <y>280</y>
       <width>221</width>
       <height>16</height>
      </rect>
@@ -341,7 +341,7 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>260</y>
+      <y>300</y>
       <width>41</width>
       <height>21</height>
      </rect>
@@ -354,7 +354,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>260</y>
+      <y>300</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -370,7 +370,7 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>260</y>
+      <y>300</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -382,8 +382,8 @@
    <widget class="QPushButton" name="extAboutCent_B">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>190</y>
+      <x>149</x>
+      <y>230</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -427,13 +427,42 @@
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>138</y>
+      <y>180</y>
       <width>91</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
      <string>Angular Units</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="binning_L">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>140</y>
+      <width>71</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>1</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_21">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>140</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Binning:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
   </widget>
