allow binning from GUI

--- a/version_0.11/aoUI_v0.11.ui
+++ b/version_0.11/aoUI_v0.11.ui
@@ -459,7 +459,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Binning:</string>
+     <string>Binning (1 or 2):</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
